Композиция классов на текущем уровне.

--- a/HDRNeuralNetwork.WinApp/Views/MainWindow.xaml
+++ b/HDRNeuralNetwork.WinApp/Views/MainWindow.xaml
@@ -13,7 +13,8 @@
     </Window.Resources>
     
     <Grid>
-        <Image>
+        <Image
+            Stretch="None">
             <Image.Source>
                 <MultiBinding 
                     Converter="{StaticResource byteArrayToImageSourceConverter}">
