--- a/HDRNeuralNetwork.WinApp/Views/MainWindow.xaml
+++ b/HDRNeuralNetwork.WinApp/Views/MainWindow.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="2*" />
+        </Grid.ColumnDefinitions>
+        
         <ListBox
             ItemsSource="{Binding Patterns}">
             <ListBox.ItemTemplate>
@@ -18,16 +23,21 @@
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
                         
-                        <TextBlock
-                            HorizontalAlignment="Center"
-                            Text="{Binding Index}" />
+                        <Label
+                            Width="40"
+                            HorizontalContentAlignment="Right"
+                            VerticalAlignment="Center"
+                            Content="{Binding Index}" />
                         <Image
                             Grid.Column="1"
                             Source="{Binding Image}" />
-                        <TextBlock
+                        <Label
                             Grid.Column="2"
                             FontSize="14"
-                            Text="{Binding Label}" />
+                            FontWeight="Bold"
+                            VerticalAlignment="Center"
+                            Margin="5,0,0,0"
+                            Content="{Binding Label}" />
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
